--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3.8'
 
 services:
-  # Console API Service (Management)
-  event-console:
-    image: partivo_event:1.0
-    container_name: partivo_event_console
-    command: ["console", "--config", "conf/config_docker.yaml"]
+  # Form Service
+  form-service:
+    image: partivo_form:1.0
+    container_name: partivo_form_service
+    command: ["server", "--config", "conf/config_docker.yaml"]
     ports:
       - "8081:8081"
     volumes:
@@ -13,22 +13,7 @@ services:
     depends_on:
       - mongodb
     environment:
-      - SERVICE_NAME=partivo_event_console
-    restart: unless-stopped
-
-  # Public API Service (Read-only)
-  event-public:
-    image: partivo_event:1.0
-    container_name: partivo_event_public
-    command: ["public", "--config", "conf/config_docker.yaml"]
-    ports:
-      - "8082:8081"  # Map to different host port to avoid conflict
-    volumes:
-      - ./logs:/app/logs
-    depends_on:
-      - mongodb
-    environment:
-      - SERVICE_NAME=partivo_event_public
+      - SERVICE_NAME=partivo_form_service
     restart: unless-stopped
 
   # MongoDB Database
@@ -41,7 +26,7 @@ services:
       - mongodb_data:/data/db
       - ./mongo-init:/docker-entrypoint-initdb.d:ro
     environment:
-      - MONGO_INITDB_DATABASE=partivo_event
+      - MONGO_INITDB_DATABASE=partivo
     restart: unless-stopped
 
 volumes:
