--- a/conf/config_docker.yaml
+++ b/conf/config_docker.yaml
@@ -1,8 +1,7 @@
 name: "partivo_form_service"
 mode: "dev"
 port: 8081
-version: 1.0.0
-time_zone: "Asia/Taipei"
+time_zone: "UTC"
 log:
   level: "debug"
   
@@ -14,11 +13,6 @@ mongodb:
 keto:
   write_addr: "192.168.1.123:4467"
   read_addr: "192.168.1.123:4466"
-
-# external:
-#   order_service:
-#     endpoint: "192.168.1.134:8081"
-#     timeout: "10s"
 
 pagination:
   default_page_size: 20
